--- a/src/App.css
+++ b/src/App.css
@@ -382,7 +382,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   z-index: -4;
 }
 
-/************ Projects Css ************/
+/************ Experiences Css ************/
 .experience {
   padding: 80px 0;
   position: relative;
@@ -508,8 +508,36 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   z-index: -4;
 }
 
+.about-me {
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  padding: 8px 10px;
+  background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.5) -5.91%, rgba(74, 47, 189, 0.5) 111.58%);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  margin-bottom: 16px;
+  display: inline-block;
+}
+
+/************ Footer Css ************/
+
+.footer img {
+  width: 20%;
+}
+.footer p {
+  font-weight: 400;
+  font-size: 14px;
+  color: #B8B8B8;
+  letter-spacing: 1.5px;
+  margin-top: 20px;
+}
+
 .App {
   text-align: center;
+}
+
+.text-sm-end{
+  padding-top: 50px !important;
 }
 
 
